# airpeace_scraper

./: .gitignore  LICENSE  README.md  app_airpeace.py  example.py  pyproject.toml  requirements.txt  setup.cfg
src/: app_airpeace.py
src/Airpeace_scraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/airpeace_scraper/: app_airpeace.py
test/: test.py  test_airpeace.py
