[metadata]
name = Airpeace_scraper
version = 0.0.1
author = Chukwudi To-Anadu
author_email = ctoanadu@gmail.com
description = A python wrapper that scrapes Airpeace Website
long_description = file: README.md
long_description_content_type = text/markdown
url = ''
project_urls =
    Bug Tracker = ''
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
